Adding Typefaces and Headings

--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -1,5 +1,7 @@
 /* Import Settings */
 /* Import Modules */
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
+@import url("");
 /* line 34, ../scss/modules/_themes.scss */
 .theme-primary {
   background-color: navy;
@@ -88,33 +90,38 @@
 }
 
 /* line 47, ../scss/modules/_themes.scss */
+.color-gray {
+  color: #9a9a9a;
+}
+
+/* line 48, ../scss/modules/_themes.scss */
 .color-dark {
   color: #222222;
 }
 
-/* line 54, ../scss/modules/_themes.scss */
+/* line 56, ../scss/modules/_themes.scss */
 .border-primary, .border-secondary, .border-light, .border-dark, .border {
   border-style: solid;
   border-width: 1px;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
 
-/* line 60, ../scss/modules/_themes.scss */
+/* line 62, ../scss/modules/_themes.scss */
 .border-primary {
   border-color: navy;
 }
 
-/* line 61, ../scss/modules/_themes.scss */
+/* line 63, ../scss/modules/_themes.scss */
 .border-secondary {
   border-color: gray;
 }
 
-/* line 62, ../scss/modules/_themes.scss */
+/* line 64, ../scss/modules/_themes.scss */
 .border-light {
   border-color: #efefef;
 }
 
-/* line 63, ../scss/modules/_themes.scss */
+/* line 65, ../scss/modules/_themes.scss */
 .border-dark {
   border-color: #222222;
 }
@@ -155,7 +162,7 @@ input, button, textarea, select {
 }
 
 /* line 54, ../scss/modules/_layout.scss */
-.inline-block-all > *, .valign-center-all > *, nav.horizontal > ul > li > a > *, .inline-block, nav ul li > a > *, nav.vertical ul li > a > *, .dropdown ul li > a > *, nav ul li > a > .badge, nav.vertical ul li > a > .badge, .dropdown ul li > a > .badge, nav ul li > a > .label, nav.vertical ul li > a > .label, .dropdown ul li > a > .label, form input[type=checkbox] + label, body input[type=checkbox] + label, form input[type=radio] + label, body input[type=radio] + label {
+.inline-block-all > *, .valign-center-all > *, nav.horizontal > ul > li > a > *, .inline-block, h1.inline, .h1.inline, h2.inline, .h2.inline, h3.inline, .h3.inline, h4.inline, .h4.inline, nav ul li > a > *, nav.vertical ul li > a > *, .dropdown ul li > a > *, nav ul li > a > .badge, nav.vertical ul li > a > .badge, .dropdown ul li > a > .badge, nav ul li > a > .label, nav.vertical ul li > a > .label, .dropdown ul li > a > .label, form input[type=checkbox] + label, body input[type=checkbox] + label, form input[type=radio] + label, body input[type=radio] + label {
   display: inline-block;
   width: auto;
   margin-top: 0;
@@ -3810,6 +3817,105 @@ header:after, footer:after, section:after {
   margin: 0;
 }
 
+/* line 9, ../scss/modules/type/_components.scss */
+body, .type-primary {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/* line 17, ../scss/modules/type/_components.scss */
+.type-secondary {
+  font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+/* line 21, ../scss/modules/type/_components.scss */
+.type-serif, .serif {
+  font-family: "Calisto MT", Georgia, "Times New Roman", Times, serif;
+}
+
+/* line 25, ../scss/modules/type/_components.scss */
+.type-sans-serif, .sans-serif {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/* line 29, ../scss/modules/type/_components.scss */
+.type-monospace, .monospace {
+  font-family: Consolas, monaco, monospace;
+}
+
+/* line 33, ../scss/modules/type/_components.scss */
+.type-script, .cursive {
+  font-family: "Brush Script MT", cursive;
+}
+
+/* line 49, ../scss/modules/type/_components.scss */
+h1.inline, .h1.inline, h2.inline, .h2.inline, h3.inline, .h3.inline, h4.inline, .h4.inline {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+/* line 56, ../scss/modules/type/_components.scss */
+h1 > small, h1 > .small, form h1 > input[type].small, body h1 > input[type].small, form h1 > textarea.small, body h1 > textarea.small, .h1 > small, .h1 > .small, form .h1 > input[type].small, body .h1 > input[type].small, form .h1 > textarea.small, body .h1 > textarea.small, h2 > small, h2 > .small, form h2 > input[type].small, body h2 > input[type].small, form h2 > textarea.small, body h2 > textarea.small, .h2 > small, .h2 > .small, form .h2 > input[type].small, body .h2 > input[type].small, form .h2 > textarea.small, body .h2 > textarea.small, h3 > small, h3 > .small, form h3 > input[type].small, body h3 > input[type].small, form h3 > textarea.small, body h3 > textarea.small, .h3 > small, .h3 > .small, form .h3 > input[type].small, body .h3 > input[type].small, form .h3 > textarea.small, body .h3 > textarea.small, h4 > small, h4 > .small, form h4 > input[type].small, body h4 > input[type].small, form h4 > textarea.small, body h4 > textarea.small, .h4 > small, .h4 > .small, form .h4 > input[type].small, body .h4 > input[type].small, form .h4 > textarea.small, body .h4 > textarea.small {
+  font-size: 74.13723%;
+}
+
+/* line 60, ../scss/modules/type/_components.scss */
+h1.sub, h1.subheading, .h1.sub, .h1.subheading, h2.sub, h2.subheading, .h2.sub, .h2.subheading, h3.sub, h3.subheading, .h3.sub, .h3.subheading, h4.sub, h4.subheading, .h4.sub, .h4.subheading {
+  font-weight: 300;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+/* line 66, ../scss/modules/type/_components.scss */
+hgroup, .hgroup {
+  margin-bottom: 1rem;
+}
+/* line 69, ../scss/modules/type/_components.scss */
+hgroup > h1, .hgroup > h1, hgroup > h2, .hgroup > h2, hgroup > h3, .hgroup > h3, hgroup > h4, .hgroup > h4, hgroup > h5, .hgroup > h5, hgroup > h6, .hgroup > h6 {
+  margin-bottom: 0;
+}
+
+/* line 78, ../scss/modules/type/_components.scss */
+h1, .h1 {
+  font-size: 16px ;
+  font-size: 1rem ;
+}
+
+/* line 78, ../scss/modules/type/_components.scss */
+h2, .h2 {
+  font-size: 18.5824px ;
+  font-size: 1.1614rem ;
+}
+
+/* line 78, ../scss/modules/type/_components.scss */
+h3, .h3 {
+  font-size: 21.5816px ;
+  font-size: 1.34885rem ;
+}
+
+/* line 78, ../scss/modules/type/_components.scss */
+h4, .h4 {
+  font-size: 25.06487px ;
+  font-size: 1.56655rem ;
+}
+
+/* line 78, ../scss/modules/type/_components.scss */
+h3, .h3 {
+  font-size: 29.11034px ;
+  font-size: 1.8194rem ;
+}
+
+/* line 78, ../scss/modules/type/_components.scss */
+h2, .h2 {
+  font-size: 33.80875px ;
+  font-size: 2.11305rem ;
+}
+
+/* line 78, ../scss/modules/type/_components.scss */
+h1, .h1 {
+  font-size: 39.26548px ;
+  font-size: 2.45409rem ;
+}
+
 /* line 24, ../scss/modules/_anchors.scss */
 a {
   text-decoration: none;
@@ -3922,35 +4028,35 @@ nav.horizontal > ul > li > a {
   height: 100%;
 }
 
-/* line 148, ../scss/modules/_themes.scss */
+/* line 150, ../scss/modules/_themes.scss */
 nav ul {
   background-color: transparent;
 }
-/* line 152, ../scss/modules/_themes.scss */
+/* line 154, ../scss/modules/_themes.scss */
 nav li {
   background-color: transparent;
 }
-/* line 155, ../scss/modules/_themes.scss */
+/* line 157, ../scss/modules/_themes.scss */
 nav li, nav li > a {
   color: inherit;
 }
-/* line 160, ../scss/modules/_themes.scss */
+/* line 162, ../scss/modules/_themes.scss */
 nav li:hover {
   background-color: navy;
 }
-/* line 164, ../scss/modules/_themes.scss */
+/* line 166, ../scss/modules/_themes.scss */
 nav li:hover, nav li:hover > a {
   color: #efefef;
 }
-/* line 170, ../scss/modules/_themes.scss */
+/* line 172, ../scss/modules/_themes.scss */
 nav li.active {
   background-color: transparent;
 }
-/* line 176, ../scss/modules/_themes.scss */
+/* line 178, ../scss/modules/_themes.scss */
 nav li.active, nav li.active > a {
   color: navy;
 }
-/* line 181, ../scss/modules/_themes.scss */
+/* line 183, ../scss/modules/_themes.scss */
 nav h1, nav h2, nav h3, nav h4, nav h5, nav h6 {
   color: auto;
 }
@@ -4004,41 +4110,41 @@ nav.tabs + .tabs-content {
 nav.tabs {
   background-color: #efefef;
 }
-/* line 311, ../scss/modules/_themes.scss */
+/* line 313, ../scss/modules/_themes.scss */
 nav.tabs ul {
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 314, ../scss/modules/_themes.scss */
+/* line 316, ../scss/modules/_themes.scss */
 nav.tabs ul li {
   border-color: transparent;
   background-color: transparent;
 }
-/* line 318, ../scss/modules/_themes.scss */
+/* line 320, ../scss/modules/_themes.scss */
 nav.tabs ul li, nav.tabs ul li > a {
   color: navy;
 }
-/* line 322, ../scss/modules/_themes.scss */
+/* line 324, ../scss/modules/_themes.scss */
 nav.tabs ul li:hover > a, nav.tabs ul li a:hover {
   color: #0000a4;
 }
-/* line 326, ../scss/modules/_themes.scss */
+/* line 328, ../scss/modules/_themes.scss */
 nav.tabs ul li:hover {
-  border-color: #dddddd;
-  background-color: #dddddd;
+  border-color: #9a9a9a;
+  background-color: #9a9a9a;
 }
-/* line 331, ../scss/modules/_themes.scss */
+/* line 333, ../scss/modules/_themes.scss */
 nav.tabs ul li.active {
-  border-color: #dddddd;
+  border-color: #9a9a9a;
   border-bottom-color: transparent;
   background-color: white;
 }
-/* line 336, ../scss/modules/_themes.scss */
+/* line 338, ../scss/modules/_themes.scss */
 nav.tabs ul li.active, nav.tabs ul li.active > a, nav.tabs ul li.active > a:hover {
   color: #222222;
 }
-/* line 343, ../scss/modules/_themes.scss */
+/* line 345, ../scss/modules/_themes.scss */
 nav.tabs + .tabs-content {
-  border-color: #dddddd;
+  border-color: #9a9a9a;
   background-color: white;
 }
 
@@ -4057,7 +4163,7 @@ nav.tabs + .tabs-content {
   z-index: 999;
   display: block;
   border-style: solid;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
   border-width: 1px;
   background-color: white;
   padding: 0.5rem 0;
@@ -4247,7 +4353,7 @@ form input[type], body input[type], form textarea, body textarea {
   margin-bottom: 0;
   margin-right: 8px;
   border: 1px solid;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
 /* line 15, ../scss/modules/_forms.scss */
 form input[type].full, body input[type].full, form textarea.full, body textarea.full {
@@ -4559,34 +4665,34 @@ table.vertical tr, table.vertical th, table.vertical td {
 table {
   color: #222222;
 }
-/* line 245, ../scss/modules/_themes.scss */
+/* line 247, ../scss/modules/_themes.scss */
 table thead {
   background-color: navy;
   color: #efefef;
 }
-/* line 255, ../scss/modules/_themes.scss */
+/* line 257, ../scss/modules/_themes.scss */
 table tfoot {
   background-color: transparent;
   color: #222222;
 }
-/* line 265, ../scss/modules/_themes.scss */
+/* line 267, ../scss/modules/_themes.scss */
 table tbody {
   background-color: transparent;
   color: #222222;
 }
-/* line 275, ../scss/modules/_themes.scss */
+/* line 277, ../scss/modules/_themes.scss */
 table, table thead, table tr, table th, table td {
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 281, ../scss/modules/_themes.scss */
+/* line 283, ../scss/modules/_themes.scss */
 table.zebra tr:nth-child(even), table.striped tr:nth-child(even) {
   background-color: transparent;
 }
-/* line 285, ../scss/modules/_themes.scss */
+/* line 287, ../scss/modules/_themes.scss */
 table.zebra tr:nth-child(odd), table.striped tr:nth-child(odd) {
   background-color: #efefef;
 }
-/* line 289, ../scss/modules/_themes.scss */
+/* line 291, ../scss/modules/_themes.scss */
 table.zebra tr:only-child, table.striped tr:only-child {
   background-color: transparent;
 }
@@ -4594,34 +4700,34 @@ table.zebra tr:only-child, table.striped tr:only-child {
 table.transparent {
   color: #222222;
 }
-/* line 245, ../scss/modules/_themes.scss */
+/* line 247, ../scss/modules/_themes.scss */
 table.transparent thead {
   background-color: transparent;
   color: inherit;
 }
-/* line 255, ../scss/modules/_themes.scss */
+/* line 257, ../scss/modules/_themes.scss */
 table.transparent tfoot {
   background-color: transparent;
   color: #222222;
 }
-/* line 265, ../scss/modules/_themes.scss */
+/* line 267, ../scss/modules/_themes.scss */
 table.transparent tbody {
   background-color: transparent;
   color: #222222;
 }
-/* line 275, ../scss/modules/_themes.scss */
+/* line 277, ../scss/modules/_themes.scss */
 table.transparent, table.transparent thead, table.transparent tr, table.transparent th, table.transparent td {
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 281, ../scss/modules/_themes.scss */
+/* line 283, ../scss/modules/_themes.scss */
 table.transparent.zebra tr:nth-child(even), table.transparent.striped tr:nth-child(even) {
   background-color: transparent;
 }
-/* line 285, ../scss/modules/_themes.scss */
+/* line 287, ../scss/modules/_themes.scss */
 table.transparent.zebra tr:nth-child(odd), table.transparent.striped tr:nth-child(odd) {
   background-color: #efefef;
 }
-/* line 289, ../scss/modules/_themes.scss */
+/* line 291, ../scss/modules/_themes.scss */
 table.transparent.zebra tr:only-child, table.transparent.striped tr:only-child {
   background-color: transparent;
 }
@@ -4684,97 +4790,97 @@ table.transparent.zebra tr:only-child, table.transparent.striped tr:only-child {
 .panel {
   background-color: white;
   color: #222222;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 119, ../scss/modules/_themes.scss */
+/* line 121, ../scss/modules/_themes.scss */
 .panel a {
   color: navy;
 }
-/* line 121, ../scss/modules/_themes.scss */
+/* line 123, ../scss/modules/_themes.scss */
 .panel a:hover {
   color: #0000a4;
 }
-/* line 124, ../scss/modules/_themes.scss */
+/* line 126, ../scss/modules/_themes.scss */
 .panel > header, .panel > hgroup {
   background-color: #f2f2f2;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 129, ../scss/modules/_themes.scss */
+/* line 131, ../scss/modules/_themes.scss */
 .panel > footer {
   background-color: #f2f2f2;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
 /* line 40, ../scss/modules/_panels.scss */
 .success.panel {
   background-color: #96cc69;
   color: #222222;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 119, ../scss/modules/_themes.scss */
+/* line 121, ../scss/modules/_themes.scss */
 .success.panel a {
   color: navy;
 }
-/* line 121, ../scss/modules/_themes.scss */
+/* line 123, ../scss/modules/_themes.scss */
 .success.panel a:hover {
   color: #0000a4;
 }
-/* line 124, ../scss/modules/_themes.scss */
+/* line 126, ../scss/modules/_themes.scss */
 .success.panel > header, .success.panel > hgroup {
   background-color: #89c656;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 129, ../scss/modules/_themes.scss */
+/* line 131, ../scss/modules/_themes.scss */
 .success.panel > footer {
   background-color: #89c656;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
 /* line 41, ../scss/modules/_panels.scss */
 .warning.panel {
   background-color: #ffcc5c;
   color: #222222;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 119, ../scss/modules/_themes.scss */
+/* line 121, ../scss/modules/_themes.scss */
 .warning.panel a {
   color: navy;
 }
-/* line 121, ../scss/modules/_themes.scss */
+/* line 123, ../scss/modules/_themes.scss */
 .warning.panel a:hover {
   color: #0000a4;
 }
-/* line 124, ../scss/modules/_themes.scss */
+/* line 126, ../scss/modules/_themes.scss */
 .warning.panel > header, .warning.panel > hgroup {
   background-color: #ffc443;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 129, ../scss/modules/_themes.scss */
+/* line 131, ../scss/modules/_themes.scss */
 .warning.panel > footer {
   background-color: #ffc443;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
 /* line 42, ../scss/modules/_panels.scss */
 .failure.panel {
   background-color: #c44741;
   color: #222222;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 119, ../scss/modules/_themes.scss */
+/* line 121, ../scss/modules/_themes.scss */
 .failure.panel a {
   color: navy;
 }
-/* line 121, ../scss/modules/_themes.scss */
+/* line 123, ../scss/modules/_themes.scss */
 .failure.panel a:hover {
   color: #0000a4;
 }
-/* line 124, ../scss/modules/_themes.scss */
+/* line 126, ../scss/modules/_themes.scss */
 .failure.panel > header, .failure.panel > hgroup {
   background-color: #b43d38;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
-/* line 129, ../scss/modules/_themes.scss */
+/* line 131, ../scss/modules/_themes.scss */
 .failure.panel > footer {
   background-color: #b43d38;
-  border-color: #dddddd;
+  border-color: #9a9a9a;
 }
 
 /* line 11, ../scss/modules/_alerts.scss */
@@ -4810,11 +4916,11 @@ table.transparent.zebra tr:only-child, table.transparent.striped tr:only-child {
   color: #efefef;
   border-color: #00004d;
 }
-/* line 100, ../scss/modules/_themes.scss */
+/* line 102, ../scss/modules/_themes.scss */
 .alert a {
   color: #7777b7;
 }
-/* line 102, ../scss/modules/_themes.scss */
+/* line 104, ../scss/modules/_themes.scss */
 .alert a:hover {
   color: #5757a4;
 }
@@ -4824,11 +4930,11 @@ table.transparent.zebra tr:only-child, table.transparent.striped tr:only-child {
   color: #efefef;
   border-color: #7bbf43;
 }
-/* line 100, ../scss/modules/_themes.scss */
+/* line 102, ../scss/modules/_themes.scss */
 .success.alert a {
   color: #c2ddac;
 }
-/* line 102, ../scss/modules/_themes.scss */
+/* line 104, ../scss/modules/_themes.scss */
 .success.alert a:hover {
   color: #a7ce88;
 }
@@ -4838,11 +4944,11 @@ table.transparent.zebra tr:only-child, table.transparent.striped tr:only-child {
   color: #efefef;
   border-color: #ffbc29;
 }
-/* line 100, ../scss/modules/_themes.scss */
+/* line 102, ../scss/modules/_themes.scss */
 .warning.alert a {
   color: #f7dda5;
 }
-/* line 102, ../scss/modules/_themes.scss */
+/* line 104, ../scss/modules/_themes.scss */
 .warning.alert a:hover {
   color: #f3cb76;
 }
@@ -4852,11 +4958,11 @@ table.transparent.zebra tr:only-child, table.transparent.striped tr:only-child {
   color: #efefef;
   border-color: #a03732;
 }
-/* line 100, ../scss/modules/_themes.scss */
+/* line 102, ../scss/modules/_themes.scss */
 .failure.alert a {
   color: #d99b98;
 }
-/* line 102, ../scss/modules/_themes.scss */
+/* line 104, ../scss/modules/_themes.scss */
 .failure.alert a:hover {
   color: #cb7773;
 }
