--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -28,7 +28,8 @@ $color-primary: navy !default;
 $color-secondary: gray !default;
 $color-dark: #222 !default;
 $color-light: #EFEFEF !default;
-$color-gray: #DDD !default;
+$color-gray: #9A9A9A !default;
+$color-gray-light: #DEDEDE !default;
 
 $color-success: #96CC69 !default;
 $color-warning: #FFCC5C !default;
