--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -43,6 +43,9 @@ $type-subheading-font-weight: 300 !default;
 $type-subheading-margin-top: 0 !default;
 $type-subheading-margin-bottom: $x-rem !default;
 
+// Body Copy
+$type-mark-color: #FF0 !default;
+
 // Imports
 @import
 	'_mixins',
