--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -45,6 +45,10 @@ $type-subheading-margin-bottom: $x-rem !default;
 
 // Body Copy
 $type-mark-color: #FF0 !default;
+$type-p-margin-bottom: 1rem !default;
+$type-p-line-height: 1.5 !default;
+$type-p-font-weight: $type-base-font-weight !default;
+$type-p-lead-scale: 1 !default;
 
 // Imports
 @import
